<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.datacommons</groupId>
    <artifactId>pipeline</artifactId>
    <version>${revision}</version>
    <name>Data Commons - Import Pipeline</name>
    <url>https://datacommons.org</url>
    <packaging>pom</packaging>


  <modules>
    <module>differ</module>
    <module>ingestion</module>
    <module>model</module>
    <module>util</module>
  </modules>

  <build>
    <pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>1.3.2</version>
                <configuration>
                    <skip>true</skip>
                    <executable>java</executable>
                </configuration>
            </plugin>
        </plugins>
    </pluginManagement>
</build>

  <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
    <!-- Dependency versions -->
    <revision>0.1-SNAPSHOT</revision>
    <beam.version>2.62.0</beam.version>
    <os.maven.plugin.version>1.7.1</os.maven.plugin.version>
    <protobuf.maven.plugin.version>0.6.1</protobuf.maven.plugin.version>
    <protoc.version>3.21.12</protoc.version>
    <protobuf.java.version>3.25.3</protobuf.java.version>
    <junit.version>4.13.1</junit.version>
    <maven-compiler-plugin.version>3.7.0</maven-compiler-plugin.version>
    <maven-exec-plugin.version>1.6.0</maven-exec-plugin.version>
    <maven-jar-plugin.version>3.0.2</maven-jar-plugin.version>
    <maven-shade-plugin.version>3.1.0</maven-shade-plugin.version>
    <mockito.version>3.7.7</mockito.version>
    <slf4j.version>1.7.30</slf4j.version>
  </properties>
</project>
